VectorTry3 is finally working almost correctly and showing some speedup