@@ -2,37 +2,63 @@ package mtakeshi1.playground.jude;
 
 import jdk.incubator.vector.DoubleVector;
 import jdk.incubator.vector.VectorOperators;
-import jdk.incubator.vector.VectorSpecies;
 
 import java.util.Arrays;
 import java.util.List;
 import java.util.Random;
-import java.util.Vector;
 import java.util.concurrent.TimeUnit;
 import java.util.stream.DoubleStream;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 
-import static java.lang.Double.NaN;
 import static java.lang.Math.*;
 import static java.util.Collections.unmodifiableList;
 
 public class VectorPlay {
 
+    record P3(double x, double y, double z) {}
+//
+//    public static Statistics evaluateStatisticsR(double[][] shiftVecVec, int boost, IntegrableFunction f, double[] iterVec, int k, double avg, double sqSum) {
+//        if (list == null) {
+//            double variance = sqSum / (k - 1);
+//            double stdDeviation = sqrt(variance);
+//            return new Statistics(
+//                    avg, variance,
+//                    new double[]{avg - 2.1 * stdDeviation, avg + 2.1 * stdDeviation}
+//            );
+//        } else {
+//            double integral = evaluateIntegral(list.val(), iterVec, boost, f);
+//            double nextAvg = avg + (integral - avg) / k;
+//            double nextSqSum = sqSum + (integral - avg) * (integral - nextAvg);
+//            return evaluateStatisticsR(list.next(), boost, f, iterVec, k + 1, nextAvg, nextSqSum);
+//        }
+//    }
+
+    static double evaluateIntegral(double[][] shiftVecVec, double[] iterVec, int boost, IntegrableFunction f) {
+        double integral = 0;
+        for(var shiftVec : shiftVecVec) {
+            for (int count = boost; count >= 0; count--) {
+                double[] point = new double[shiftVec.length];
+                for (int i = 0; i < point.length; i++) {
+                    point[i] = (shiftVec[i] + count * iterVec[i]) % 1.0;
+                }
+                double evaluation = f.evaluate(point);
+                integral = integral + (evaluation - integral) / (boost - count + 1);
+            }
+        }
+        return integral;
+    }
     static double evaluateIntegral(double[] shiftVec, DoubleVector iterVector, int boost, IntegrableFunction f) {
         DoubleVector shiftsVector = DoubleVector.fromArray(DoubleVector.SPECIES_256, Arrays.copyOf(shiftVec, 4), 0);
-        //--add-modules jdk.incubator.vector
         return evaluateIntegralVector(boost, f, shiftsVector, iterVector);
     }
 
     private static double evaluateIntegralVector(int boost, IntegrableFunction f, DoubleVector shiftsVector, DoubleVector iterVector) {
         double integral = 0;
-        DoubleVector point;
         for (int count = boost; count >= 0; count--) {
-//            VectorOperators.FMA
-            point = iterVector.lanewise(VectorOperators.FMA, count, shiftsVector);
-//            point = shiftsVector.add(iterVector.mul(count));
+            DoubleVector point = iterVector.lanewise(VectorOperators.FMA, count, shiftsVector);
             point = point.sub(point.convert(VectorOperators.D2L, 0).convert(VectorOperators.L2D, 0));
+
             double evaluation = f.evaluate(point.toArray());
             integral = integral + (evaluation - integral) / (boost - count + 1);
         }
@@ -44,8 +70,8 @@ public class VectorPlay {
         return evaluateIntegralVector(list, boost, f, iterVector);
     }
 
-    public static Statistics evaluateIntegralVector(LinkedList list, int boost, IntegrableFunction f, DoubleVector iterVector) {
 
+    public static Statistics evaluateIntegralVector(LinkedList list, int boost, IntegrableFunction f, DoubleVector iterVector) {
         int k = 1;
         double avg = 0.0;
         double sqSum = 0.0;
@@ -62,24 +88,13 @@ public class VectorPlay {
         return new Statistics(avg, variance, new double[]{avg - 2.1 * stdDeviation, avg + 2.1 * stdDeviation});
     }
 
-    static double[] evaluateIterationVector(int dim) {
-        double phi = NaN;
-        record Stack(double cur, double prev) {
-            boolean hasConverged() {
-                return abs(cur - prev) < 0.00000001;
-            }
-
-            Stack iterate(int dim) {
-                return new Stack(
-                        pow((1 + cur), 1.0 / (1 + dim)),
-                        cur
-                );
-            }
+    public static double[] evaluateIterationVector(int dim) {
+        double cur = 1.0, prev = 0.0;
+        while (abs(cur - prev) > 0.00000001) {
+            prev = cur;
+            cur = pow((1 + cur), 1.0 / (1 + dim));
         }
-        for (var stack = new Stack(1, 0); !stack.hasConverged(); stack = stack.iterate(dim)) {
-            phi = stack.cur();
-        }
-        double invertOfPhi = 1 / phi; // Mainly to have it effectively final...
+        double invertOfPhi = 1 / prev;
         return IntStream.range(0, dim)
                 .mapToDouble(k -> pow(invertOfPhi, k))
                 .toArray();
